--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 app.base-url=http://localhost:8080
 app.expriration-days=365
+# Redis Config
+spring.redis.host=localhost
+spring.redis.port=6379
+app.cache.ttl=86400
+
