--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 app.base-url=http://localhost:8080
 app.expriration-days=365
@@ -14,4 +14,9 @@ app.expriration-days=365
 spring.redis.host=localhost
 spring.redis.port=6379
 app.cache.ttl=86400
+## Loquibase Config
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+logging.level.liquibase=DEBUG
+
 
