--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.show-sql=true
 app.base-url=http://localhost:8080
 app.expriration-days=365
 # Redis Config
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
+spring.redis.password=${REDIS_PASSWORD:}
 app.cache.ttl=86400
 ## Loquibase Config
 spring.liquibase.enabled=true
