--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 app.base-url=http://localhost:8080
 app.expriration-days=365
+
 # Redis Config
-spring.redis.host=${REDIS_HOST:localhost}
-spring.redis.port=${REDIS_PORT:6379}
-spring.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.url=${REDIS_URL}
 app.cache.ttl=86400
+spring.data.redis.ssl.enabled=false
+
 ## Loquibase Config
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
